// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests renders 1`] = `
<View
  accessibilityLabel="Countdown timer"
  accessible={true}
  style={
    Object {
      "height": 180,
      "position": "relative",
      "width": 180,
    }
  }
>
  <RNSVGSvgView
    bbHeight={180}
    bbWidth={180}
    focusable={false}
    height={180}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 180,
          "width": 180,
        },
      ]
    }
    width={180}
  >
    <RNSVGGroup>
      <RNSVGPath
        d="m 90,6
          a 84,84 0 1,0 0,168
          a 84,84 0 1,0 0,-168"
        fill={null}
        propList={
          Array [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        stroke={4292467161}
        strokeWidth={12}
      />
      <RNSVGPath
        d="m 90,6
          a 84,84 0 1,0 0,168
          a 84,84 0 1,0 0,-168"
        fill={null}
        propList={
          Array [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeDasharray",
            "strokeDashoffset",
            "strokeLinecap",
          ]
        }
        stroke={4278208375}
        strokeDasharray={
          Array [
            527.7875658030853,
            527.7875658030853,
          ]
        }
        strokeDashoffset={null}
        strokeLinecap={1}
        strokeWidth={12}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`snapshot tests renders with gradient 1`] = `
<View
  accessibilityLabel="Countdown timer"
  accessible={true}
  style={
    Object {
      "height": 180,
      "position": "relative",
      "width": 180,
    }
  }
>
  <RNSVGSvgView
    bbHeight={180}
    bbWidth={180}
    focusable={false}
    height={180}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 180,
          "width": 180,
        },
      ]
    }
    width={180}
  >
    <RNSVGGroup>
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            Array [
              0,
              -16758921,
              0.4,
              -16758921,
              1,
              -5588020,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="countdown-circle-timer-gradient-4hgb79ur1xg"
          x1="1"
          x2="0"
          y1="0"
          y2="0"
        />
      </RNSVGDefs>
      <RNSVGPath
        d="m 90,6
          a 84,84 0 1,0 0,168
          a 84,84 0 1,0 0,-168"
        fill={null}
        propList={
          Array [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        stroke={4292467161}
        strokeWidth={12}
      />
      <RNSVGPath
        d="m 90,6
          a 84,84 0 1,0 0,168
          a 84,84 0 1,0 0,-168"
        fill={null}
        propList={
          Array [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeDasharray",
            "strokeDashoffset",
            "strokeLinecap",
          ]
        }
        stroke={
          Array [
            1,
            "countdown-circle-timer-gradient-4hgb79ur1xg",
          ]
        }
        strokeDasharray={
          Array [
            527.7875658030853,
            527.7875658030853,
          ]
        }
        strokeDashoffset={null}
        strokeLinecap={1}
        strokeWidth={12}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "100%",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <Text>
      5
    </Text>
  </View>
</View>
`;

exports[`snapshot tests renders with single color 1`] = `
<View
  accessibilityLabel="Countdown timer"
  accessible={true}
  style={
    Object {
      "height": 180,
      "position": "relative",
      "width": 180,
    }
  }
>
  <RNSVGSvgView
    bbHeight={180}
    bbWidth={180}
    focusable={false}
    height={180}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 180,
          "width": 180,
        },
      ]
    }
    width={180}
  >
    <RNSVGGroup>
      <RNSVGPath
        d="m 90,6
          a 84,84 0 1,0 0,168
          a 84,84 0 1,0 0,-168"
        fill={null}
        propList={
          Array [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        stroke={4292467161}
        strokeWidth={12}
      />
      <RNSVGPath
        d="m 90,6
          a 84,84 0 1,0 0,168
          a 84,84 0 1,0 0,-168"
        fill={null}
        propList={
          Array [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeDasharray",
            "strokeDashoffset",
            "strokeLinecap",
          ]
        }
        stroke={4278208375}
        strokeDasharray={
          Array [
            527.7875658030853,
            527.7875658030853,
          ]
        }
        strokeDashoffset={null}
        strokeLinecap={1}
        strokeWidth={12}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "100%",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <Text>
      5
    </Text>
  </View>
</View>
`;

exports[`snapshot tests renders with single color provided as a string 1`] = `
<View
  accessibilityLabel="Countdown timer"
  accessible={true}
  style={
    Object {
      "height": 180,
      "position": "relative",
      "width": 180,
    }
  }
>
  <RNSVGSvgView
    bbHeight={180}
    bbWidth={180}
    focusable={false}
    height={180}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 180,
          "width": 180,
        },
      ]
    }
    width={180}
  >
    <RNSVGGroup>
      <RNSVGPath
        d="m 90,6
          a 84,84 0 1,0 0,168
          a 84,84 0 1,0 0,-168"
        fill={null}
        propList={
          Array [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        stroke={4292467161}
        strokeWidth={12}
      />
      <RNSVGPath
        d="m 90,6
          a 84,84 0 1,0 0,168
          a 84,84 0 1,0 0,-168"
        fill={null}
        propList={
          Array [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeDasharray",
            "strokeDashoffset",
            "strokeLinecap",
          ]
        }
        stroke={4278208375}
        strokeDasharray={
          Array [
            527.7875658030853,
            527.7875658030853,
          ]
        }
        strokeDashoffset={null}
        strokeLinecap={1}
        strokeWidth={12}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "100%",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <Text>
      5
    </Text>
  </View>
</View>
`;

exports[`snapshot tests renders with time 1`] = `
<View
  accessibilityLabel="Countdown timer"
  accessible={true}
  style={
    Object {
      "height": 180,
      "position": "relative",
      "width": 180,
    }
  }
>
  <RNSVGSvgView
    bbHeight={180}
    bbWidth={180}
    focusable={false}
    height={180}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 180,
          "width": 180,
        },
      ]
    }
    width={180}
  >
    <RNSVGGroup>
      <RNSVGPath
        d="m 90,6
          a 84,84 0 1,0 0,168
          a 84,84 0 1,0 0,-168"
        fill={null}
        propList={
          Array [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        stroke={4292467161}
        strokeWidth={12}
      />
      <RNSVGPath
        d="m 90,6
          a 84,84 0 1,0 0,168
          a 84,84 0 1,0 0,-168"
        fill={null}
        propList={
          Array [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeDasharray",
            "strokeDashoffset",
            "strokeLinecap",
          ]
        }
        stroke={4278208375}
        strokeDasharray={
          Array [
            527.7875658030853,
            527.7875658030853,
          ]
        }
        strokeDashoffset={null}
        strokeLinecap={1}
        strokeWidth={12}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": "100%",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  >
    <Text>
      10
    </Text>
  </View>
  <Text
    accessibilityLiveRegion="assertive"
    accessibilityRole="timer"
    importantForAccessibility="yes"
    style={
      Object {
        "height": 0,
        "opacity": 0,
      }
    }
  >
    10
  </Text>
</View>
`;
